<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:checkableBehavior="single">
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/settings_icon"
        android:title="@string/settings"
        />
        <item
            android:id="@+id/aboutUsFragment"
            android:icon="@drawable/info_icon"
            android:title="@string/about"
            />
    </group>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/exit_vector_asset"
                android:title="@string/logout"
                />
        </menu>
        </item>
</menu>