<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/et_add_expense_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ExpenseTitle"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_add_expense_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:layout_marginTop="12dp"
        />
    <EditText
        android:id="@+id/et_add_expense_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:focusable="false"
        android:layout_marginTop="12dp"
        android:inputType="none"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/et_add_expense_category"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/Epensetype"
            android:inputType="none"
            android:focusable="true"
            android:clickable="true"
            android:layout_marginTop="12dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>